<resources>
    <string name="app_name">Menu Rio</string>

    <string name="GOOGLE_API_KEY">AIzaSyAIq9Jy5kFpiXUOxhCQPQSSCrm3ckh9LJ0</string>

    <!-- NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <!-- Alerts -->
    <string name="alert_no_internet">No internet!</string>
    <string name="alert_gps_disabled">GPS disabled!</string>

    <string name="error_couldnt_was_possible_get_options">Couldn\'t was possible get the options</string>

    <!-- ShortcutInfo -->
    <string name="shortcut_info_beaches">List all beaches.</string>
    <string name="shortcut_info_hotels">List all hotels.</string>
    <string name="shortcut_info_leisures">List all leisure options.</string>
    <string name="shortcut_info_movies">List all movies.</string>
    <string name="shortcut_info_museuns">List all museuns.</string>
    <string name="shortcut_info_restaurants">List all restaurants.</string>
    <string name="shortcut_info_sport">List all sport options.</string>
    <string name="shortcut_info_shopping_mall">List all shopping mall.</string>
    <string name="shortcut_info_theaters">List all theaters.</string>

    <string name="address">Address</string>
    <string name="beaches">Beaches</string>
    <string name="search_by_name">Search by name...</string>
    <string name="created_by">Created by</string>
    <string name="created_by_rodrigo_amora">Created by Rodrigo Amora</string>
    <string name="communicate">Communicate</string>
    <string name="download_the_app">Download the APP Menu Rio:</string>
    <string name="email">E-mail:</string>
    <string name="email2">E-mail: rodrigo.amora.freitas@gmail.com</string>
    <string name="hotels">Hotels</string>
    <string name="leisure">Leisure</string>
    <string name="link_app">https://play.google.com/store/apps/details?id=br.com.lazerrio</string>
    <string name="movies">Movies</string>
    <string name="museuns">Museuns</string>
    <string name="my_email">rodrigo.amora.freitas@gmail.com</string>
    <string name="my_site">www.rodrigoamora.com.br</string>
    <string name="name">Name:</string>
    <string name="no_result">No result!</string>
    <string name="no_options_nearby">There isn\'t options nearby.</string>
    <string name="options">Options</string>
    <string name="restaurants">Restaurants</string>
    <string name="theaters">Theaters</string>
    <string name="search">Search</string>
    <string name="site">Site:</string>
    <string name="site2">Site: www.rodrigoamora.com.br</string>
    <string name="share">Share</string>
    <string name="shopping_mall">Shopping Mall</string>
    <string name="sports">Sports</string>
    <string name="wait">Wait...</string>
    <string name="version">Version:</string>
    <string name="view_details">View details</string>

</resources>
