<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beach"
            android:icon="@mipmap/praia"
            android:title="@string/beaches" />
        <item
            android:id="@+id/nav_hotel"
            android:icon="@mipmap/hotel"
            android:title="@string/hotels" />
        <item
            android:id="@+id/nav_leisure"
            android:icon="@mipmap/opcoes"
            android:title="@string/leisure" />
        <item
            android:id="@+id/nav_movie"
            android:icon="@mipmap/cine"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_museum"
            android:icon="@mipmap/museu"
            android:title="@string/museuns" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@mipmap/chef"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@mipmap/shopping"
            android:title="@string/shopping_mall" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@mipmap/esportes"
            android:title="@string/sports" />
        <item
            android:id="@+id/nav_theater"
            android:icon="@mipmap/teatro"
            android:title="@string/theaters" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/action_about" />
        </menu>
    </item>

</menu>
