<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:background="@drawable/ipanema"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            app:cardCornerRadius="7dp"
            android:background="@android:color/white"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/beach"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/praia"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:text="@string/beaches"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hotel"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/hotel"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:text="@string/hotels"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/leisure"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/opcoes"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:text="@string/leisure"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/movie"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/cine"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:text="@string/movies"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/museum"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/museu"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:text="@string/museuns"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/restaurant"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/chef"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:text="@string/restaurants"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shopping_mall"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/shopping"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:text="@string/shopping_mall"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sport"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/esportes"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:text="@string/sports"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/theater"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/teatro"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:text="@string/theaters"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>